Fix incorrect placement of quotes in one text

--- a/src/schooltool/gradebook/locales/de.po
+++ b/src/schooltool/gradebook/locales/de.po
@@ -899,8 +899,8 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/weight_categories.pt:22
 msgid ""
 "For example, to weight exams as 60% of the grade, homework as 20% and "
-"quizzes as 20%, enter \"60\" next to \"Exam,\" 20\" next to \"Homework\" and "
-"\"20\" next to \"quiz.\""
+"quizzes as 20%, enter \"60\" next to \"Exam\", \"20\" next to \"Homework\" and "
+"\"20\" next to \"Quiz\"."
 msgstr ""
 "Zum Beispiel bei der Gewichtung der Note: Prüfungen 60%,  Hausaufgaben  20%, "
 "Quiz 20%. Geben Sie ein: \"60\" bei \"Prüfung\", \"20\" bei \"Hausaufgaben\" "
