--- a/src/schooltool/gradebook/locales/es.po
+++ b/src/schooltool/gradebook/locales/es.po
@@ -896,8 +896,8 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/weight_categories.pt:22
 msgid ""
 "For example, to weight exams as 60% of the grade, homework as 20% and "
-"quizzes as 20%, enter \"60\" next to \"Exam,\" 20\" next to \"Homework\" and "
-"\"20\" next to \"quiz.\""
+"quizzes as 20%, enter \"60\" next to \"Exam\", \"20\" next to \"Homework\" "
+"and \"20\" next to \"Quiz\"."
 msgstr ""
 "Por ejemplo, para ponderar los exámenes como el 60% de la nota, tareas como "
 "20% y las pruebas como 20%, introduzca \"60\" a la par de \"Examen\", \"20\" "
