--- a/src/schooltool/gradebook/locales/vi.po
+++ b/src/schooltool/gradebook/locales/vi.po
@@ -888,8 +888,8 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/weight_categories.pt:22
 msgid ""
 "For example, to weight exams as 60% of the grade, homework as 20% and "
-"quizzes as 20%, enter \"60\" next to \"Exam,\" 20\" next to \"Homework\" and "
-"\"20\" next to \"quiz.\""
+"quizzes as 20%, enter \"60\" next to \"Exam\", \"20\" next to \"Homework\" "
+"and \"20\" next to \"Quiz\"."
 msgstr ""
 "Lấy ví dụ điểm thi được tính 60% của thang điểm, bài tập về nhà tính 20% và "
 "20% thảo luận, hãy nhập 60 vào ô kế tiếp của ô điểm thi, 20 vào ô kế tiếp "
