--- a/src/schooltool/gradebook/locales/km.po
+++ b/src/schooltool/gradebook/locales/km.po
@@ -896,8 +896,8 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/weight_categories.pt:22
 msgid ""
 "For example, to weight exams as 60% of the grade, homework as 20% and "
-"quizzes as 20%, enter \"60\" next to \"Exam,\" 20\" next to \"Homework\" and "
-"\"20\" next to \"quiz.\""
+"quizzes as 20%, enter \"60\" next to \"Exam\", \"20\" next to \"Homework\" and "
+"\"20\" next to \"Quiz\"."
 msgstr ""
 "ឧទាហរណ៍ ដើម្បី រឹតបន្តឹង​ការ​ប្រឡង​​មាន​ពិន្ទុ ៦០% កិច្ចការ​ផ្ទះ​ ២០% "
 "និង​សំណួរ ២០% បញ្ចូល \"60\" នៅ​ជាប់នឹង \"ប្រឡង\" 20\" នៅជាប់នឹង "
