--- a/src/schooltool/gradebook/locales/schooltool.gradebook.pot
+++ b/src/schooltool/gradebook/locales/schooltool.gradebook.pot
@@ -825,7 +825,7 @@ msgid "Enter numeric values for each relevant category. The total of all values 
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/weight_categories.pt:22
-msgid "For example, to weight exams as 60% of the grade, homework as 20% and quizzes as 20%, enter \"60\" next to \"Exam,\" 20\" next to \"Homework\" and \"20\" next to \"quiz.\""
+msgid "For example, to weight exams as 60% of the grade, homework as 20% and quizzes as 20%, enter \"60\" next to \"Exam\", \"20\" next to \"Homework\" and \"20\" next to \"Quiz\"."
 msgstr ""
 
 #: /src/schooltool/gradebook/browser/worksheet.py:101
